--- a/my-vue-city-app/package.json
+++ b/my-vue-city-app/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "babel-polyfill": "^6.26.0",
+    "vue": "^2.7.14",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
