--- a/my-vue-city-app/package.json
+++ b/my-vue-city-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "jquery": "^3.6.4",
     "vue": "^2.7.14",
     "vuex": "^3.6.2"
   },
