--- a/my-vue-city-app/package.json
+++ b/my-vue-city-app/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "jquery": "^3.6.4",
-    "vue": "^2.7.14",
+    "jquery": "^3.7.0",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
